--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     max-width: 1400px;
     margin: 0;
     box-sizing: border-box;
-    padding: 0 30px;
+    padding: 0 50px;
 }
 
 a {
@@ -24,10 +24,6 @@ a {
     align-items: center;
     justify-content: space-between;
     margin: auto;
-}
-
-.headerImg {
-    padding: 30px;
 }
 
 .headerImgImg {
@@ -443,7 +439,7 @@ a {
     display: flex;
     background-color: #F2F2F2;
     justify-content:flex-start;
-    padding-top: 25px;
+    padding: 25px 0 40px 0;
 }
 
 .about {
