--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@ a {
 
 .activitiesContainerCardImg {
     width: 100%;
-    height: 90%;
+    height: 87%;
     position: relative;
 }
 
@@ -429,6 +429,10 @@ a {
     position: absolute;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+}
+
+.activities h4 {
+    padding-left: 20px;
 }
 
 /* Design Footer */
