--- a/style.css
+++ b/style.css
@@ -222,29 +222,30 @@ a {
 .mainHosting {
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding: 30px;
+    padding: 30px 0 30px 30px;
+    padding: 40px 20px 40px 40px;
 }
 
 .mainHostingGrid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 30px;
+
 }
 
 .mainHostingTitle {
     margin: 0 0 20px 0;
+    font-size: 22px;
+    font-weight: 700;
 }
 
 .mainHostingCard {
     display: flex;
     flex-direction: column;
-    width: 25%;
-    min-width: 25%;
     background-color: white;
     border-radius: 20px;
-    text-align:start;
     padding: 5px;
-    margin: 10px;
+    width: 29%;
     height: 100%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -255,31 +256,37 @@ a {
     width: 100%;
     max-width: 100%;
     max-height: 100%;
-    height: 100px;
+    height: 120px;
 }
 
 .hostingCardTitle {
-    margin: 0 0 0 8px;
+    margin: 4px 0 0 5px;
+    font-size: 16px;
 }
 
 .hostingCardDesc {
-    margin: 0 0 18px 8px;
+    margin: 6px 0 0 5px;
+    font-size: 14px;
 }
 
 .star-rating {
+    margin: 8px 0 5px 5px;
     display: flex;
 }
 
-.mainHostingCard .star-rating {
-    margin: 0 0 0 8px;
+.fa-star {
+    font-size: 12px;
 }
-
 .checked {
     color: #0065fc;
 }
 
 .unchecked {
     color: #D9D9D9;
+}
+
+.mainHostingGridFooterTitle {
+    padding-top: 20px;
 }
 
 /* popular hosting */
@@ -359,7 +366,7 @@ a {
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1124px){
     .hosting {
         flex-direction: column;
     }
