--- a/style.css
+++ b/style.css
@@ -222,8 +222,7 @@ a {
 .mainHosting {
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding: 30px 0 30px 30px;
-    padding: 40px 20px 40px 40px;
+    padding: 30px 30px;
 }
 
 .mainHostingGrid {
@@ -260,17 +259,17 @@ a {
 }
 
 .hostingCardTitle {
-    margin: 4px 0 0 5px;
+    margin: 4px 0 0 15px;
     font-size: 16px;
 }
 
 .hostingCardDesc {
-    margin: 6px 0 0 5px;
+    margin: 6px 0 0 15px;
     font-size: 14px;
 }
 
 .star-rating {
-    margin: 8px 0 5px 5px;
+    padding: 8px 0 5px 15px;
     display: flex;
 }
 
@@ -286,16 +285,16 @@ a {
 }
 
 .mainHostingGridFooterTitle {
-    padding-top: 20px;
+    margin-top: 60px;
 }
 
 /* popular hosting */
 
 .popularHosting {
-    width: 30%;
+    width: 40%;
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding: 25px;
+    padding: 40px 30px 30px 30px;
 }
 
 .popularHostingGrid {
@@ -304,12 +303,14 @@ a {
     width: 100%;
     gap: 25px;
     margin-top: 40px;
+    height: 100%;
 }
 
 .popularHostingTitle {
     display: flex;
     justify-content: space-between;
-    margin: 0;
+    margin: 0 0 20px 0;
+    font-size: 22px;
 }
 
 .popularHostingTitle i {
@@ -319,9 +320,9 @@ a {
 .popularHostingCard {
     background-color: white;
     border-radius: 20px;
-    padding: 3px;
+    padding: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    height: 22%;
+    height: 150px;
     width: 100%;
 }
 
@@ -332,9 +333,8 @@ a {
 }
 .popularHostingImgContainer {
     position: relative;
-    width: 35%;
-    min-width: 35%;
-    max-width: 35%;
+    width: 40%;
+    min-width: 40%;
     min-height: 100%;
 }
 
@@ -342,26 +342,23 @@ a {
     position: absolute;
     width: 100%;
     height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
 }
 
 .popularHostingCardDesc {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    justify-content: space-between;
+    padding: 10px 10px 0 0;
 }
 
-.popularHostingCardTitle {
-    margin: 5px 0 0 5px;
-}
+.popularHostingCard .star-rating {
+    padding-bottom: 15px;
 
-.popularHostingCardDesc {
-    margin: 0 0 0 5px;
-}
-
-.popularHostingCardDesc .star-rating {
-    margin: 50px 0 0 5px;
 }
 
 /* MEDIA QUERIES */
