--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     max-width: 1400px;
     margin: 0;
     box-sizing: border-box;
-    padding: 0 50px;
 }
 
 .main {
@@ -55,6 +54,7 @@ a {
 @media screen and (max-width: 768px) {
     .header {
         flex-direction: column;
+        padding: 20px 0 0 0;
     }
     .headerImg {
         justify-content: center;
@@ -74,6 +74,9 @@ a {
 
 /* Design Search Zone */
 
+.searchZone {
+    padding-left:50px;
+}
 .searchZoneTitle {
     font-weight: 700;
     margin-bottom: -0.5rem;
@@ -83,6 +86,7 @@ a {
 }
 .searchZoneHeaderTitle{
     margin: 10px 0 0 0;
+    font-size: 22px;
 }
 
 
@@ -108,8 +112,8 @@ a {
 ::placeholder  {
     font-family: 'Raleway';
     font-size: 16px;
-    font-weight: 600;
-    color: lightgrey;
+    font-weight: 700;
+    color: black;
 }
 
 .searchFormArea:focus {
@@ -155,14 +159,16 @@ a {
 
 .filtersZone {
     display: flex;
-    margin-top: 2rem;
+    margin-top: 30px;
     flex-wrap: wrap;
+    padding: 0 50px;
 }
 
 .filtersZoneTitle {
     margin: 0 20px 20px 0;
     display: flex;
     align-items: center;
+    font-size: 18px;
 }
 
 .filters {
@@ -203,6 +209,7 @@ a {
 .result {
     margin-top: 10px;
     margin-bottom: 30px;
+    padding: 0 50px;
 }
 
 .result i {
@@ -219,6 +226,7 @@ a {
     display: flex;
     flex-direction: row;
     gap: 30px;
+    padding: 0 50px;
 }
 
 .mainHosting {
@@ -278,6 +286,7 @@ a {
 .fa-star {
     font-size: 12px;
 }
+
 .checked {
     color: #0065fc;
 }
@@ -296,7 +305,7 @@ a {
     width: 40%;
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding: 40px 30px 30px 30px;
+    padding: 30px 30px 30px 30px;
 }
 
 .popularHostingGrid {
@@ -317,6 +326,8 @@ a {
 
 .popularHostingTitle i {
     color: #0065fc;
+    font-size: 22px;
+    padding-top: 2px;
 }
 
 .popularHostingCard {
@@ -365,15 +376,15 @@ a {
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 1124px){
+@media screen and (max-width: 1194px){
     .hosting {
         flex-direction: column;
     }
     .mainHosting {
-        width: 90%;
+        width: 94%;
     }
     .popularHosting {
-        width: 90%;
+        width: 94%;
     }
     .popularHostingGrid {
         flex-direction: row;
@@ -407,6 +418,7 @@ a {
     display: flex;
     flex-direction: column;
     margin-top: 60px;
+    padding: 0 50px;
 }
 
 .activitiesContainer {
@@ -423,12 +435,12 @@ a {
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .activitiesContainerCardImg {
     width: 100%;
-    height: 87%;
-    min-height: 87%;
+    height: 100%;
     position: relative;
 }
 
@@ -440,16 +452,37 @@ a {
     border-radius: 20px 20px 0 0;
 }
 
-.activities h4 {
+.activitiesContainerCardTitle {
     display: flex;
-    padding: 0 20px;
+    margin: 0;
+    padding: 5px 15px;
+    height: 10%;
+    align-content: center;
+    flex-wrap: wrap;
 }
 
+.activitiesContainerCardTitle h4 {
+    display: flex;
+    margin: 0;
+    padding: 0;
+
+}
+
+@media screen and (max-width: 1193px){
+    .activitiesContainer {
+        height: 267px;
+    }
+    .activitiesContainerCardImg {
+        height: 80%;
+    }
+    .activitiesContainerCardTitle {
+        height: 17%;
+    }
+}
 /* Design Footer */
 
 .footer {
-    width: 100%;
-    margin-top: 60px;
+    margin: 60px 50px 0 50px;
     display: flex;
     background-color: #F2F2F2;
     justify-content:flex-start;
