--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ a {
 }
 
 .filtersZoneTitle {
-    margin: 0 20px 20px 0;
+    margin-right: 30px;
     display: flex;
     align-items: center;
     font-size: 18px;
@@ -176,13 +176,12 @@ a {
 .filters {
     display: flex;
     align-items: center;
-    margin-right: 2.5rem;
-    margin-bottom: 1rem;
     border: 2px solid #d9d9d9;
     cursor: pointer;
     border-radius: 50px;
     font-weight: 700;
-    padding: 0.75rem;
+    padding: 15px;
+    margin-right: 20px;
 }
 
 .filters:hover {
@@ -195,27 +194,38 @@ a {
     justify-content: center;
     align-items: center;
     margin-right: 10px;
-    font-size: 1.25rem;
+    font-size: 23px;
 }
 
 /* MEDIA QUERIES FILTRES */
 
 @media screen and (max-width: 768px) {
+    .filters {
+        width: calc(40%);
+        padding: 10px 0 10px 10px;
+        margin-bottom: 10px;
+    }
     .filtersZone {
         padding: 0 20px;
     }
     .filtersZoneTitle {
         width: 100%;
     }
+    .filtersName {
+        font-size: 11px;
+    }
     .result {
         padding-left: 20px;
     }
 }
 
+@media screen and (max-width: 768px){
+
+}
 /* Results */
 
 .result {
-    margin-top: 10px;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 
@@ -381,22 +391,19 @@ a {
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 1194px){
+@media screen and (max-width: 992px){
     .hosting {
         flex-direction: column;
-    }
-    .mainHosting {
-        width: 94%;
-    }
-    .popularHosting {
-        width: 94%;
     }
     .popularHostingGrid {
         flex-direction: row;
     }
+    .popularHosting {
+        width: 100%;
+    }
 }
 
-@media screen and (max-width: 854px) {
+@media screen and (max-width: 768px) {
     .mainHosting {
         order: 1;
         background-color: white;
@@ -413,9 +420,13 @@ a {
         order: 0;
         padding: 25px 30px 40px 20px;
         border-radius: 0px;
+        width: 90%;
     }
     .popularHostingGrid {
         flex-direction: column;
+    }
+    .popularHostingCard {
+
     }
 }
 
