--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Raleway', sans-serif;
     max-width: 1400px;
-    margin: 0;
-    box-sizing: border-box;
     padding: 0 50px;
 }
 
@@ -435,68 +439,107 @@ a {
 /* Activities Design */
 
 .activities {
-    display: flex;
-    flex-direction: column;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 .activitiesContainer {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     height: 450px;
-    gap: 40px;
+    width: 100%;
+    margin: 20px 0 60px;
 }
 
-.activitiesContainerCard {
+
+.activitiesContainer a {
+    position: relative;
+    width: 23%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 20px;
-    width: calc(25%);
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     overflow: hidden;
+    height: 450px;
 }
 
 .activitiesContainerCardImg {
-    width: 100%;
     height: 100%;
-    position: relative;
 }
 
 .activitiesContainerCardImg img {
-    width: 100%;
     height: 100%;
-    position: absolute;
+    width: 100%;
     object-fit: cover;
-    border-radius: 20px 20px 0 0;
+    object-position: center;
 }
 
-.activitiesContainerCardTitle {
+figcaption {
+    position: absolute;
     display: flex;
-    margin: 0;
-    padding: 5px 15px;
-    height: 10%;
     align-content: center;
+    bottom: 0;
+    padding: 0 20px;
+    width: 100%;
+    height: 10%;
+    font-weight: 700;
+    color: black;
+    background-color: white;
     flex-wrap: wrap;
 }
 
-.activitiesContainerCardTitle h4 {
+.activitiesContainerCardTitle {
+    height: 15%;
+    flex-wrap: wrap;
     display: flex;
-    margin: 0;
-    padding: 0;
+    font-weight: 700;
+    align-content: center;
+    padding-left: 15px;
 }
 
-@media screen and (max-width: 1193px){
+.activitiesContainerCardTitle p {
+    margin: 0;
+}
+
+
+@media screen and (min-width: 992px){
     .activitiesContainer {
-        height: 267px;
+        flex-direction: row;
+        justify-content: space-around;
+        height: auto;
+        gap: 30px;
     }
-    .activitiesContainerCardImg {
-        height: 80%;
-    }
-    .activitiesContainerCardTitle {
-        height: 17%;
+    .activitiesContainer a {
+        width: 30%;
     }
 }
+
+@media screen and (max-width: 992px){
+    .activitiesContainer {
+        flex-direction: row;
+        height: auto;
+    }
+    .activitiesContainer a {
+        height: 267px;
+    }
+    figcaption {
+        height: 20%;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .activities {
+        padding: 0 20px;
+    }
+    .activitiesContainer {
+        flex-direction: column;
+        height: auto;
+        gap: 30px;
+    }
+    .activitiesContainer a {
+        width: 100%;
+    }
+}
+
 /* Design Footer */
 
 .footer {
