--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@ body {
     padding: 0 50px;
 }
 
-.main {
-    margin: auto;
-}
-
 a {
     text-decoration: none;
     color: black;
@@ -537,6 +533,10 @@ figcaption {
     }
     .activitiesContainer a {
         width: 100%;
+        height: 190px;
+    }
+    figcaption {
+        height: 22%;
     }
 }
 
@@ -546,31 +546,45 @@ figcaption {
     margin: 60px 0 0 0;
     display: flex;
     background-color: #F2F2F2;
-    justify-content:flex-start;
-    padding: 25px 0 40px 0;
-}
-
-.about {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    margin-left: 70px;
+    justify-content: space-around;
+    padding: 40px 0 40px 70px;
 }
 
 .footer p {
     margin: 7px 0;
 }
 
+.footer h3 {
+    padding-bottom: 15px;
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+
+}
+
 .ourHosting {
-    flex-wrap: nowrap;
     display: flex;
     flex-direction: column;
     width: 30%;
 }
 
 .help {
-    flex-wrap: nowrap;
     display: flex;
     flex-direction: column;
     width: 30%;
+}
+
+@media screen and (max-width: 768px){
+    .footer {
+        flex-direction: column;
+    }
+    .about, .ourHosting, .help {
+        width: 100%;
+    }
+    .about, .ourHosting {
+        margin-bottom: 40px;
+    }
 }
