Ajustement margin popular hosting

--- a/style.css
+++ b/style.css
@@ -463,6 +463,7 @@ figcaption {
     }
     .popularHosting {
         width: 100%;
+        margin-top: 50px;
     }
     .popularHostingCard {
         width: 30%;
