--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ figcaption {
 /* Design Footer */
 
 .footer {
-    margin: 60px 0 0 0;
+    margin: 40px 0 0 0;
     display: flex;
     background-color: #F2F2F2;
     justify-content: space-around;
@@ -572,6 +572,9 @@ figcaption {
     .mainHostingCard {
         width: 100%;
     }
+    .mainHostingGridFooterTitle {
+        display: none;
+    }
     .popularHosting {
         order: 0;
         padding: 25px 20px 40px 20px;
@@ -607,6 +610,7 @@ figcaption {
     .footer {
         flex-direction: column;
         padding-left: 30px;
+        margin-top: 0;
     }
     .about, .ourHosting, .help {
         width: 100%;
