--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ a {
     display: flex;
     margin-top: 30px;
     flex-wrap: wrap;
+    gap: 30px;
 }
 
 .filtersZoneTitle {
@@ -138,7 +139,6 @@ a {
     border-radius: 50px;
     font-weight: 700;
     padding: 15px;
-    margin-right: 20px;
 }
 
 .filters:hover {
@@ -545,12 +545,13 @@ figcaption {
     /* Media queries filtres */
 
     .filters {
-        width: calc(44%);
+        width: 49%;
         padding: 10px 0 10px 10px;
         margin-bottom: 10px;
     }
     .filtersZone {
-        padding: 0 0 0 20px;
+        padding: 0 20px 0 20px;
+        gap: 5px;
     }
     .filtersZoneTitle {
         width: 100%;
