--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ a {
 
 .searchFormArea {
     border: 1px solid #F2F2F2;
-    padding: 0 0 0 25px;
+    padding: 0 60px 0 25px;
 }
 
 ::placeholder  {
@@ -335,7 +335,7 @@ a {
 
 .activitiesContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     height: 450px;
@@ -435,21 +435,6 @@ figcaption {
 
 /* MEDIA QUERIES */
 
-@media screen and (min-width: 992px){
-
-    /* Media queries Activités */
-
-    .activitiesContainer {
-        flex-direction: row;
-        justify-content: space-around;
-        height: auto;
-        gap: 30px;
-    }
-    .activitiesContainer a {
-        width: 30%;
-    }
-}
-
 @media screen and (max-width: 992px){
 
     /* Media queries hosting */
@@ -511,6 +496,7 @@ figcaption {
     .cta {
         width: 100%;
         border-bottom-color: #D9D9D9;
+        padding-bottom: 25px;
     }
     .cta:hover {
         border-top-color: transparent;
@@ -561,7 +547,7 @@ figcaption {
         font-size: 11px;
     }
     .result {
-        padding-left: 20px;
+        padding: 0 20px;
     }
 
     /* Media queries Hosting */
